--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gassense",
+  "name": "AQUiFi",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -16,6 +17,7 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.19",
+    "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-circular-progress": "^1.3.9",
@@ -23,13 +25,18 @@
     "react-native-elements": "^3.4.3",
     "react-native-exit-app": "^2.0.0",
     "react-native-gauge": "^0.1.2",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-simple-gauge": "^0.3.1",
-    "react-navigation": "^5.0.0"
+    "react-native-svg": "13.9.0",
+    "react-navigation": "^5.0.0",
+    "victory-native": "^36.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
