--- a/package.json
+++ b/package.json
@@ -4,33 +4,34 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
+    "cjs": "^0.0.11",
+    "expo": "^50.0.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.9",
     "firebase": "^10.7.2",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.2",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-elements": "^3.4.3",
     "react-native-exit-app": "^2.0.0",
     "react-native-gauge": "^0.1.2",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-simple-gauge": "^0.3.1",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "14.1.0",
     "react-navigation": "^5.0.0",
     "victory-native": "^36.8.2"
   },
