--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "cjs": "^0.0.11",
     "expo": "^50.0.4",
+    "expo-doctor": "^1.3.0",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.9",
     "firebase": "^10.7.2",
