--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 7.1.1"
+    "version": ">= 7.1.1",
+    "appVersionSource": "remote"
   },
   "build": {
     "preview": {
@@ -24,7 +25,8 @@
       "channel": "preview4"
     },
     "production": {
-      "channel": "production"
+      "channel": "production",
+      "autoIncrement": true
     }
   },
   "submit": {
