--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "cjs": "^0.0.11",
-    "expo": "^50.0.4",
+    "expo": "~50.0.5",
     "expo-doctor": "^1.3.0",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.9",
