--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-elements": "^3.4.3",
