--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -20,7 +21,8 @@
     "expo-updates": "~0.24.10",
     "firebase": "^10.7.2",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
     "react-native-animatable": "^1.4.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -33,6 +35,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-simple-gauge": "^0.3.1",
     "react-native-svg": "14.1.0",
+    "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "victory-native": "^36.8.2"
   },
