--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,4 +32,4 @@ jobs:
         run: yarn install
 
       - name: Publish update
-        run: eas update --branch preview --auto
+        run: eas update --auto
