Finished historical graph, trying out env in Github Actions

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,4 +32,12 @@ jobs:
         run: yarn install
 
       - name: Publish update
+        env: 
+          API_KEY: ${{ vars.API_KEY }}
+          AUTH_DOMAIN: ${{ vars.AUTH_DOMAIN }}
+          DATABASE_URL: ${{ vars.DATABASE_URL }}
+          PROJECT_ID: ${{ vars.PROJECT_ID }}
+          STORAGE_BUCKET: ${{ vars.STORAGE_BUCKET }}
+          MESSAGING_SENDER_ID: ${{ vars.MESSAGING_SENDER_ID }}
+          APP_ID: ${{ vars.APP_ID }}
         run: eas update --auto
