--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "AQUiFi",
     "slug": "AQUiFi",
     "owner": "project-design",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -15,7 +15,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.projectdesign.AQUiFi"
     },
     "android": {
       "adaptiveIcon": {
