--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -13,13 +13,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          cache: npm
+          cache: yarn
       - name: Setup Expo and EAS
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
-        run: npm ci
+        run: yarn ci
       - name: Build on EAS
         run: eas build --platform all --non-interactive --no-wait
