--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "cjs": "^0.0.11",
-    "expo": "~50.0.7",
+    "expo": "~50.0.17",
     "expo-doctor": "^1.3.0",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.11",
+    "expo-updates": "~0.24.12",
     "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -45,5 +45,6 @@
     "@babel/core": "^7.20.0",
     "react-native-dotenv": "^3.4.9"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@4.1.1"
 }
