--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-alert-notification": "^0.4.0",
     "react-native-animatable": "^1.4.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -34,7 +35,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-simple-gauge": "^0.3.1",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
