--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-simple-gauge": "^0.3.1",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
