--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/netinfo": "11.1.0",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "cjs": "^0.0.11",
-    "expo": "~50.0.17",
+    "expo": "^51.0.8",
     "expo-doctor": "^1.3.0",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.14",
     "firebase": "^10.11.1",
+    "metro": "~0.80.8",
+    "metro-config": "~0.80.8",
+    "metro-resolver": "~0.80.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-alert-notification": "^0.4.0",
     "react-native-animatable": "^1.4.0",
     "react-native-circular-progress": "^1.3.9",
@@ -32,20 +35,20 @@
     "react-native-elements": "^3.4.3",
     "react-native-exit-app": "^2.0.0",
     "react-native-gauge": "^0.1.2",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-simple-gauge": "^0.3.1",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "victory-native": "^36.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "react-native-dotenv": "^3.4.9"
   },
   "private": true,
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.2.2"
 }
