--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "cjs": "^0.0.11",
-    "expo": "^51.0.8",
+    "expo": "~51.0.9",
     "expo-doctor": "^1.3.0",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.14",
+    "expo-updates": "~0.25.15",
     "firebase": "^10.11.1",
     "metro": "~0.80.8",
     "metro-config": "~0.80.8",
