--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.24.6",
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
@@ -16,8 +17,9 @@
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "babel-plugin-module-resolver": "^5.0.2",
     "cjs": "^0.0.11",
-    "expo": "~51.0.9",
+    "expo": "^51.0.9",
     "expo-doctor": "^1.3.0",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.15",
@@ -39,8 +41,10 @@
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-simple-gauge": "^0.3.1",
     "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "victory-native": "^36.8.2"
