--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -37,12 +40,4 @@ jobs:
       - name: Create preview
         uses: expo/expo-github-action/preview@v8
         with:
-          env:
-            API_KEY: ${{ vars.API_KEY }}
-            AUTH_DOMAIN: ${{ vars.AUTH_DOMAIN }}
-            DATABASE_URL: ${{ vars.DATABASE_URL }}
-            PROJECT_ID: ${{ vars.PROJECT_ID }}
-            STORAGE_BUCKET: ${{ vars.STORAGE_BUCKET }}
-            MESSAGING_SENDER_ID: ${{ vars.MESSAGING_SENDER_ID }}
-            APP_ID: ${{ vars.APP_ID }}
           command: eas update --auto
