--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -32,12 +35,4 @@ jobs:
         run: yarn install
 
       - name: Publish update
-        env: 
-          API_KEY: ${{ vars.API_KEY }}
-          AUTH_DOMAIN: ${{ vars.AUTH_DOMAIN }}
-          DATABASE_URL: ${{ vars.DATABASE_URL }}
-          PROJECT_ID: ${{ vars.PROJECT_ID }}
-          STORAGE_BUCKET: ${{ vars.STORAGE_BUCKET }}
-          MESSAGING_SENDER_ID: ${{ vars.MESSAGING_SENDER_ID }}
-          APP_ID: ${{ vars.APP_ID }}
         run: eas update --auto
