Converted side bar to drawer navigation

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-screens": "3.31.1",
     "react-native-simple-gauge": "^0.3.1",
     "react-native-svg": "15.2.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
