Migrate to default Expo env from react native dotenv, added env in workflows and in eas

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,17 +22,25 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: '20.x'
           cache: yarn
 
       - name: Setup EAS
         uses: expo/expo-github-action@v8
         with:
-          eas-version: latest
+          eas-version: 'latest'
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
         run: yarn install
 
       - name: Publish update
+        env:
+          EXPO_PUBLIC_API_KEY: ${{ secrets.EXPO_PUBLIC_API_KEY }}
+          EXPO_PUBLIC_AUTH_DOMAIN: ${{ secrets.EXPO_PUBLIC_AUTH_DOMAIN }}
+          EXPO_PUBLIC_DATABASE_URL: ${{ secrets.EXPO_PUBLIC_DATABASE_URL }}
+          EXPO_PUBLIC_PROJECT_ID: ${{ secrets.EXPO_PUBLIC_PROJECT_ID }}
+          EXPO_PUBLIC_STORAGE_BUCKET: ${{ secrets.EXPO_PUBLIC_STORAGE_BUCKET }}
+          EXPO_PUBLIC_MESSAGING_SENDER_ID: ${{ secrets.EXPO_PUBLIC_MESSAGING_SENDER_ID }}
+          EXPO_PUBLIC_APP_ID: ${{ secrets.EXPO_PUBLIC_APP_ID }}
         run: eas update --auto
