--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "react-native-exit-app": "^2.0.0",
     "react-native-gauge": "^0.1.2",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -51,8 +50,7 @@
     "victory-native": "^36.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "react-native-dotenv": "^3.4.9"
+    "@babel/core": "^7.24.0"
   },
   "private": true,
   "packageManager": "yarn@4.2.2"
