Set branch to preview in workflows

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -46,4 +46,4 @@ jobs:
           EXPO_PUBLIC_STORAGE_BUCKET: ${{ secrets.EXPO_PUBLIC_STORAGE_BUCKET }}
           EXPO_PUBLIC_MESSAGING_SENDER_ID: ${{ secrets.EXPO_PUBLIC_MESSAGING_SENDER_ID }}
           EXPO_PUBLIC_APP_ID: ${{ secrets.EXPO_PUBLIC_APP_ID }}
-        run: eas update --auto
+        run: eas update --branch preview --auto
