--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/stack": "^6.3.20",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "^51.0.9",
+    "expo-device": "~6.0.2",
+    "expo-notifications": "~0.28.7",
     "expo-updates": "~0.25.15",
     "firebase": "^10.11.1",
     "metro": "~0.80.8",
