--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "^51.0.9",
+    "expo": "~51.0.11",
     "expo-device": "~6.0.2",
     "expo-notifications": "~0.28.7",
-    "expo-updates": "~0.25.15",
+    "expo-updates": "~0.25.16",
     "firebase": "^10.11.1",
     "metro": "~0.80.8",
     "metro-config": "~0.80.8",
     "metro-resolver": "~0.80.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-elements": "^3.4.3",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
